fixed youtube video size on small screen

--- a/static/style.css
+++ b/static/style.css
@@ -394,3 +394,18 @@ transition:0.6s;
 #id_SubscriberEmail{
 width:20rem;
 }
+
+.videoWrapper {
+    position: relative;
+    padding-bottom: 56.25%; /* 16:9 */
+    height: 0;
+    overflow: hidden;
+}
+
+.videoWrapper iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
